--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -8,44 +8,40 @@
              Title="{Binding Tatu.IdentificacaoAnimal}"           
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             Padding="15">
 
-    <ContentPage.Resources>
-        <DataTemplate x:Key="CapturasTemplate" x:DataType="model:CapturaModel">
-            <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}" InputTransparent="True">
-                <StackLayout>
-                    <Label Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
-                    <Label Text="{Binding DadosGerais.DataDeCaptura, StringFormat='{0:dd/MM/yyyy}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
-                    <Label Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat='{0:hh\\:mm}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
-                </StackLayout>
-            </Frame>
-        </DataTemplate>
-    </ContentPage.Resources>
+    <Shell.TitleView>
+        <Grid ColumnDefinitions="*, *">
+            <Label Text="{Binding Tatu.IdentificacaoAnimal}" TextColor="White" FontSize="20" FontAttributes="Bold" VerticalOptions="Center"/>
+            <Button Grid.Column="1" ImageSource="icone_mais_branco.png" Scale=".7" HorizontalOptions="End" Clicked="AdicionarCaptura_Clicked" BackgroundColor="Transparent"/>
+        </Grid>
+    </Shell.TitleView>
+    
 
-    <Grid Padding="20">
-                
-        <ScrollView>
-            <CollectionView ItemsSource="{Binding Capturas}" 
-                            ItemTemplate="{StaticResource CapturasTemplate}"
-                            SelectionMode="Single"
-                            SelectionChanged="Capturas_SelectionChanged">
+    <CollectionView ItemsSource="{Binding Capturas}" 
+                    SelectionMode="Single"
+                    SelectionChanged="Capturas_SelectionChanged">
 
-                <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Vertical"
-                                     Span="2"
-                                     HorizontalItemSpacing="20"
-                                     VerticalItemSpacing="10"/>
-                </CollectionView.ItemsLayout>
+        <CollectionView.ItemTemplate>
+            <DataTemplate x:DataType="model:CapturaModel">
+                <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}" InputTransparent="True">
+                    <StackLayout>
 
-            </CollectionView>
-        </ScrollView>
+                        <Label>
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
+                                    <Span Text="{Binding DadosGerais.DataDeCaptura, StringFormat='&#x0a;{0:dd/MM/yyyy}'}" TextColor="{StaticResource Primary}"/>
+                                    <Span Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat=' - {0:hh\\:mm}'}" TextColor="{StaticResource Primary}"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
 
-        <Button HorizontalOptions="End" 
-                VerticalOptions="End" 
-                Text="Adicionar Captura"
-                TextColor="White"
-                BackgroundColor="{StaticResource Primary}"
-                Clicked="AdicionarCaptura_Clicked"/>
-    </Grid>
+                    </StackLayout>
+                </Frame>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 
 </ContentPage>
