fix: atualização automática de tatus cadastrados, cadastro de microchip feito após cadastro de tatu
anteriormente, para mostrar um novo tatu cadastrado na tela, era preciso atualizar a tela manualmente. Agora, isso é feito automaticamente após o cadastro. A adição do microchip agora é feita após o cadastro do tatu.

--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -8,40 +8,60 @@
              Title="{Binding Tatu.IdentificacaoAnimal}"           
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
-             BackgroundColor="White"
-             Padding="15">
+             BackgroundColor="White">
 
     <Shell.TitleView>
-        <Grid ColumnDefinitions="*, *">
+        <Grid ColumnDefinitions="6*, 2*, 2*">
             <Label Text="{Binding Tatu.IdentificacaoAnimal}" TextColor="White" FontSize="20" FontAttributes="Bold" VerticalOptions="Center"/>
-            <Button Grid.Column="1" ImageSource="icone_mais_branco.png" Scale=".7" HorizontalOptions="End" Clicked="AdicionarCaptura_Clicked" BackgroundColor="Transparent"/>
+            <Button Grid.Column="1" ImageSource="icone_chip.png" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="Microchip_Clicked"/>
+            <Button Grid.Column="2" ImageSource="icone_mais_branco.png" Scale=".7" HorizontalOptions="End" BackgroundColor="Transparent" Clicked="AdicionarCaptura_Clicked" />
         </Grid>
     </Shell.TitleView>
+
+    <ScrollView>
+        <StackLayout Padding="20" Spacing="20">
+
+            <Label Text="{Binding Tatu.NumeroMicrochip, StringFormat='Chip: {0}'}" 
+                   TextColor="{StaticResource Primary}"
+                   FontAttributes="Bold"
+                   FontSize="17"
+                   HorizontalTextAlignment="Center">
+
+                <Label.Triggers>
+                    <DataTrigger TargetType="Label" Binding="{Binding Tatu.NumeroMicrochip}" Value="0">
+                        <Setter Property="Text" Value="Chip: não cadastrado"/>
+                    </DataTrigger>
+                </Label.Triggers>
+                            
+            </Label>
+
+            <Label Text="CAPTURAS" 
+                   TextColor="{StaticResource Primary}" 
+                   FontSize="17" FontAttributes="Bold" 
+                   HorizontalTextAlignment="Center"/>
+
+            <CollectionView ItemsSource="{Binding Tatu.Capturas}" 
+                SelectionMode="Single"
+                SelectionChanged="Capturas_SelectionChanged">
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:CapturaModel">
+                        <Frame Padding="10" Margin="0, 0, 0, 10" BorderColor="{StaticResource Primary}" InputTransparent="True">
+                            <Label>
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
+                                        <Span Text="{Binding DadosGerais.DataDeCaptura, StringFormat='&#x0a;{0:dd/MM/yyyy}'}" TextColor="{StaticResource Primary}"/>
+                                        <Span Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat=' - {0:hh\\:mm}'}" TextColor="{StaticResource Primary}"/>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+        </StackLayout>
+    </ScrollView>
     
-
-    <CollectionView ItemsSource="{Binding Capturas}" 
-                    SelectionMode="Single"
-                    SelectionChanged="Capturas_SelectionChanged">
-
-        <CollectionView.ItemTemplate>
-            <DataTemplate x:DataType="model:CapturaModel">
-                <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}" InputTransparent="True">
-                    <StackLayout>
-
-                        <Label>
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <Span Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
-                                    <Span Text="{Binding DadosGerais.DataDeCaptura, StringFormat='&#x0a;{0:dd/MM/yyyy}'}" TextColor="{StaticResource Primary}"/>
-                                    <Span Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat=' - {0:hh\\:mm}'}" TextColor="{StaticResource Primary}"/>
-                                </FormattedString>
-                            </Label.FormattedText>
-                        </Label>
-
-                    </StackLayout>
-                </Frame>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
-
 </ContentPage>
