--- a/TolyID/MVVM/Views/CadastroTatuPopup.xaml
+++ b/TolyID/MVVM/Views/CadastroTatuPopup.xaml
@@ -8,21 +8,37 @@
     <mct:Popup.Resources>
         <Style TargetType="{x:Type views:CadastroTatuPopup}">
             <Setter Property="Color" Value="White"/>
-            <Setter Property="Size" Value="300, 180"/>
+            <Setter Property="Size" Value="300, 175"/>
         </Style>
     </mct:Popup.Resources>
 
     <VerticalStackLayout Padding="20" Spacing="10">
 
         <Label Text="IDENTIFICAÇÃO DO ANIMAL" TextColor="{StaticResource Primary}" FontAttributes="Bold" HorizontalOptions="Center"/>
-        <Entry x:Name="IdEntry" Text="{Binding Tatu.IdentificacaoAnimal}" Placeholder="Digite" TextColor="Black"/>
+        <Frame Style="{StaticResource FrameEntradaDeDados}">
+            <Entry x:Name="IdEntry" Text="{Binding Tatu.IdentificacaoAnimal}" Placeholder="Digite" TextColor="Black"/>
+        </Frame>
 
         <!--<Label Text="NÚMERO DO MICROCHIP" TextColor="{StaticResource Primary}" FontAttributes="Bold" HorizontalOptions="Center"/>
         <Entry x:Name="MicrochipEntry" Keyboard="Numeric" Text="{Binding Tatu.NumeroMicrochip}" TextColor="Black" TextChanged="MicrochipEntry_TextChanged"/>-->
 
         <Grid ColumnDefinitions="*, *" ColumnSpacing="15" Padding="10">
-            <Button CornerRadius="20" Text="Cancelar" TextColor="White" Clicked="Cancelar_Clicked" BackgroundColor="{StaticResource Primary}"/>
-            <Button CornerRadius="20" Grid.Column="1" Text="Adicionar" TextColor="White" Clicked="Adicionar_Clicked" BackgroundColor="{StaticResource Primary}"/>
+            <Button CornerRadius="20" 
+                    Text="Cancelar" 
+                    TextColor="White" 
+                    Clicked="Cancelar_Clicked"
+                    BackgroundColor="{StaticResource Primary}"
+                    WidthRequest="90"
+                    HeightRequest="40"/>
+            
+            <Button CornerRadius="20" 
+                    Grid.Column="1" 
+                    Text="Adicionar" 
+                    TextColor="White" 
+                    Clicked="Adicionar_Clicked" 
+                    BackgroundColor="{StaticResource Primary}"
+                    WidthRequest="90"
+                    HeightRequest="40"/>
         </Grid>
 
     </VerticalStackLayout>
