refactor: reorganização de itens dos parâmetros fisiológicos, botão de voltar na tela de cadastro de captura

--- a/TolyID/App.xaml
+++ b/TolyID/App.xaml
@@ -5,10 +5,17 @@
              x:Class="TolyID.App">
     <Application.Resources>
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="{StaticResource Primary}" />
+                <Setter Property="BarTextColor" Value="White" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
