--- a/TolyID/Resources/Styles/Styles.xaml
+++ b/TolyID/Resources/Styles/Styles.xaml
@@ -33,6 +33,7 @@
         <Setter Property="BorderColor" Value="{StaticResource Primary}"/>
         <Setter Property="Padding" Value="15, 3, 0, 0"/>
         <Setter Property="HeightRequest" Value="50"/>
+        <Setter Property="Margin" Value="0, 0, 0, 5"/>
     </Style>
 
     <Style x:Key="FrameParametrosFisiologicos" TargetType="Frame">
