--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -40,6 +40,18 @@
                    FontSize="17" FontAttributes="Bold" 
                    HorizontalTextAlignment="Start"/>
 
+            <!--<Label Text="Ainda não há capturas feitas!" 
+                   TextColor="{StaticResource Primary}"
+                   FontAttributes="Bold"
+                   HorizontalTextAlignment="Center">
+
+                <Label.Triggers>
+                    <DataTrigger TargetType="Label" Binding="{Binding NumeroDeCapturas}" Value="0">
+                        <Setter Property="Text" Value="Chip: não cadastrado"/>
+                    </DataTrigger>
+                </Label.Triggers>
+            </Label>-->
+
             <CollectionView ItemsSource="{Binding Tatu.Capturas}" 
                 SelectionMode="Single"
                 SelectionChanged="Capturas_SelectionChanged">
